simple linear regression

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 [workspace]
 members = [
   "test1-autodiff",
-  "test2-mlp-classifier"
+  "test2-mlp-classifier",
+  "test3-simple-linear-regression",
+  "common"
 ]
