--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [workspace]
 members = [
+  "common",
   "test1-autodiff",
   "test2-mlp-classifier",
   "test3-simple-linear-regression",
   "test4-multivariable-regression",
-  "common"
+  "test5-playing-with-matrix-ideas",
+  "test6-nn",
 ]
