--- a/test6-nn/Cargo.toml
+++ b/test6-nn/Cargo.toml
@@ -12,6 +12,9 @@ metrics = { path = "../metrics" }
 rand = "0.8.4"
 rand_distr = "0.4.2"
 rayon = "1.5.1"
+serde_json = "1.0.78"
+serde = "1.0.136"
+serde_derive = "1.0.136"
 
 [dev-dependencies]
 float-cmp = "0.9.0"
